# NOCI-Parser

./: CMakeLists.txt  README.md
example/: normal.out  verbose.out
include/: nocistate.hpp  parseNOCI.hpp
src/: main.cxx  parseNOCI.cxx
